--- a/Lead.html
+++ b/Lead.html
@@ -7,143 +7,48 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
     <title>Deegeelab - Digital Marketing - SuperCharge Your Business</title>
     <link href="assets/Logo/DeegeelabWhite.png" rel="icon">
-    <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:100,300,400,600,700" rel="stylesheet" type="text/css">
-    <link href="assets/fonts/flaticon.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/responsive.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/jquery.fullpage.min.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/animate.css" rel="stylesheet" type="text/css">
     <link href="assets/css/materialize.min.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/socialfloat.css" rel="stylesheet" type="text/css">
     <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
-    <!-- <link href="assets/fonts/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" type="text/css"> -->
+    <link href="assets/css/responsive.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/animate.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/svg.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/pillar.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
-<body class="bgpillars">
-<!-- Side Nav -->    
-    <!-- <header>
-        <div class="navBtn">
-        +
-        </div>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="index.html#pillars">Services</a>
-            <a href="index.html#contact">Contact</a>
-            <hr>
-           OUR SERVICES
-            <hr>
-            <a href="social.html">Social Media Management</a>
-            <a href="marketing.html">Digital Marketing</a>
-            <a href="lead.html">Lead Generation</a>
-            <a href="webdev.html">Website Development</a>
-            <a href="backend.html">Customer Support Back-End</a>
-            <a href="frontend.html">Customer Support Front-End</a>
-        </nav>
-    </header> -->
-<!-- Floating Social Media Side nav -->
-    <div>
-        <div class="fl-fl float-fb">
-            <i class="fab fa-facebook fa-2x"></i> <a href="" target="_blank">Like us!</a>
-        </div>
-        <div class="fl-fl float-tw">
-            <i class="fab fa-twitter fa-2x"></i> <a href="" target="_blank">Follow us!</a>
-        </div>
-        <div class="fl-fl float-gp">
-            <i class="fab fa-linkedin fa-2x"></i> <a href="" target="_blank">Connect with us!</a>
-        </div>
-        <div class="fl-fl float-rs">
-            <i class="fab fa-instagram fa-2x"></i> <a href="" target="_blank">Follow us</a>
-        </div>
-    </div>
-<!-- Contents Starts here -->
-    <div class="container" style="width: 100% !important; max-width: 99%;">
-        <div class="section col s12 m10 l8 offset-l2" style="padding: 0 !important;">
-            <!-- desktop -->
-            <div class="hide-on-med-only hide-on-small-only" id='display_desktop'>
-                <div class="card horizontal row">
-                    <div class="col s8 card-content" id='lead'></div>
-                    <div class="col s6 card-content" style="color: black; padding: 5% !important;">
-                        <h5 style="color: black; text-align: left"><strong>Lead Generation</strong></h5>
-                        <p class="grey-text" style="text-align: left"><span>We will take care of your current customers whilst gaining more leads for your business using our sales team's proven record of success. We can tie into your overarching sales plan or develop a new strategy with you.</span></p>
-                        <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
-                        <div data-collapse="collapse-content1"  data-text-close="Close">
-                            <ul class="grey-text" style="text-align: left">
-                                <li><span>Content Marketing</span></li>
-                                <li><span>Social Media Marketing</span></li>
-                                <li><span>SEO</span></li>
-                                <li><span>Website Optimization</span></li>
-                                <li><span>Email Marketing</span></li>
-                            </ul>
-                        </div>    
-                        <div class="card-action">
-                            <span><a href="index.html#contact">Let's Talk</a></span>
-                        </div>
+<body class="bgpillars fullwidth">
+    <div class="container row white" style="width: 100% !important; max-width: 100%; margin: 0px;">
+        <div class="section" style="padding: 0 !important;">
+            <div class="white" id='display_desktop'>
+                <div class="col s12 m6 l6" id='lead'>
+                    <a href="#" data-activates="menu" class="btn-flat btn-floating grey-text darken-4 menu"><i class="material-icons">menu</i></a>
+                    <div class='service-banner'></div>
+                </div>
+                <div class="col s12 m6 l6 services-content" >
+                    <div class="scroll">
+                        <h4>Lead Generation</h4>
+                        <p class="grey-text">We will take care of your current customers whilst gaining more leads for your business using our sales team's proven record of success. We can tie into your overarching sales plan or develop a new strategy with you.</p>
+                        <ul class="grey-text paragraph">
+                            <li><i class="material-icons bulleted">brightness_1</i> Content Marketing</li>
+                            <li><i class="material-icons bulleted">brightness_1</i> Social Media Marketing</li>
+                            <li><i class="material-icons bulleted">brightness_1</i> SEO</li>
+                            <li><i class="material-icons bulleted">brightness_1</i> Website Optimization</li>
+                            <li><i class="material-icons bulleted">brightness_1</i> Email Marketing</li>
+                        </ul>
+                        <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
                     </div>
                 </div>
             </div>
-            <!-- tablet -->
-            <div class="hide-on-small-only hide-on-large-only" id='display_tablet'>
-                <div class="col s12">
-                    <div class="card horizontal">
-                    <div class="card-image" id='lead'></div>
-                        <div class="col s12 card-stacked">
-                            <div class="card-content" style="color: black">
-                                <h3 style="color: black; text-align: left"><span>Lead Generation</span></h3>
-                                <p style="text-align: left"><span>We will take care of your current customers whilst gaining more leads for your business using our sales team's proven record of success. We can tie into your overarching sales plan or develop a new strategy with you.</span></p>
-                                <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
-                                <div data-collapse="collapse-content1"  data-text-close="Close">
-                                    <ul style="text-align: left">
-                                        <li><span>Content Marketing</span></li>
-                                        <li><span>Social Media Marketing</span></li>
-                                        <li><span>SEO</span></li>
-                                        <li><span>Website Optimization</span></li>
-                                        <li><span>Email Marketing</span></li>
-                                    </ul>
-                                </div>    
-                                <div class="card-action">
-                                    <span><a href="index.html#contact">Let's Talk</a></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div><!-- mobile -->
-            <div class="hide-on-med-only hide-on-large-only" id='display_mobile'>
-                <div class="col s12">
-                    <div class="card col s12">
-                        <div class="col s12 card-stacked">
-                            <div class="card-content" style="color: black">
-                                <h3 style="color: black; text-align: left"><span>Lead Generation</span></h3>
-                                <p style="text-align: left"><span>We will take care of your current customers whilst gaining more leads for your business using our sales team's proven record of success. We can tie into your overarching sales plan or develop a new strategy with you.</span></p>
-                                <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
-                                <div data-collapse="collapse-content1"  data-text-close="Close">
-                                    <ul style="text-align: left">
-                                        <li><span>Content Marketing</span></li>
-                                        <li><span>Social Media Marketing</span></li>
-                                        <li><span>SEO</span></li>
-                                        <li><span>Website Optimization</span></li>
-                                        <li><span>Email Marketing</span></li>
-                                    </ul>
-                                </div>    
-                                <div class="card-action">
-                                    <span><a href="index.html#contact">Let's Talk</a></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+       </div>
     </div>
     <div id="footer">
         <div class="left">
-            <ul style="margin-top: -10px;">
+            <ul>
                 <li><img width="60px" src="assets/images/footer/dgwhite.png"></li>
                 <li><a class="white-text" href='#'><i class="material-icons" style="line-height: unset;">copyright</i> <span class="right">2017 Deegeelab</span></a></li>
             </ul>
         </div>
         <div class="right">
-            <ul style="margin-top: -10px;">
+            <ul>
                 <li><a href="privacy-policy.html" class="white-text">Privacy Policy</a></li>
                 <li><a href="terms-of-use.html" class="white-text">Terms of use</a></li>
                 <li style="top: 5px;position:  relative;">
@@ -154,18 +59,41 @@
             </ul>
         </div>
     </div>
+    <aside id="overlap-gradient">
+        <ul id="menu" class="side-nav">
+            <li>
+                <div class="row">
+                    <a href="#" class="btn-flat btn-floating grey-text darken-4 close_menu" onclick="$(this).sideNav('hide');" style="left: 0%; top: 0%; position: absolute;"><i class="material-icons">close</i></a>
+                    <ul class="collapsible collapsible-accordion" style="top: 30%; position: absolute;">
+                        <li class="">
+                            <a class="waves-effect waves-blue white-text" href="social.html">Social Media Management</a>
+                        </li>
+                        <li class="">
+                            <a class="waves-effect waves-blue white-text" href="marketing.html">Digital Marketing</a>
+                        </li>
+                        <li class="">
+                            <a class="waves-effect waves-blue white-text" href="lead.html">Lead Generation</a>
+                        </li>
+                        <li class="">
+                            <a class="waves-effect waves-blue white-text" href="webdev.html">Website Development</a>
+                        </li>
+                        <li class="">
+                            <a class="waves-effect waves-blue white-text" href="backend.html">Customer Support Back-End</a>
+                        </li>
+                        <li class="">
+                            <a class="waves-effect waves-blue white-text" href="frontend.html">Customer Support Front-End</a>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
+    </aside>
     <script src="assets/js/jquery.min.js"></script> 
     <script src="assets/js/jquery.easings.min.js"></script> 
     <script src="assets/js/jquery.sidr.min.js"></script>
+    <script src="assets/js/materialize.min.js"></script> 
     <script src="assets/js/scrolloverflow.min.js"></script> 
-    <script src="assets/js/jquery.fullPage.js"></script> 
-    <script src="assets/js/jquery.fullpage.extensions.min.js"></script>
-    <script src="assets/js/readmore.js"></script>
-    <script src="assets/js/navbar.js"></script> 
     <script >
-  $('.fixed-action-btn').openFAB();
-  $('.fixed-action-btn').closeFAB();
-  $('.fixed-action-btn.toolbar').openToolbar();
-  $('.fixed-action-btn.toolbar').closeToolbar()
+        $(".menu").sideNav();
     </script>
 </html>
