--- a/backend.html
+++ b/backend.html
@@ -18,13 +18,12 @@
 <body class="bgpillars fullwidth">
     <div class="container row white" style="width: 100% !important; max-width: 100%; margin: 0px;">
         <div class="section" style="padding: 0 !important;">
-            <!-- desktop -->
-            <div class="hide-on-med-only hide-on-small-only white" id='display_desktop'>
-                <div class="col l6" id='backend'>
+            <div class="white" id='display_desktop'>
+                <div class="col s12 m6 l6" id='backend'>
                     <a href="#" data-activates="menu" class="btn-flat btn-floating grey-text darken-4 menu"><i class="material-icons">menu</i></a>
-                    <div style="height: 768px"></div>
+                    <div class='service-banner'></div>
                 </div>
-                <div class="col l6 services-content" style="padding: 50px 50px 100px 50px !important; ">
+                <div class="col s12 m6 l6 services-content" >
                     <div class="scroll">
                         <h4>Customer Support (Back End)</h4>
                         <p class="grey-text">
@@ -46,60 +45,7 @@
                     </div>
                 </div>
             </div>
-            <!-- tablet -->
-            <!-- <div class="hide-on-small-only hide-on-large-only" id='display_tablet'>
-                <div class="col s12">
-                    <div class="card horizontal">
-                    <div class="card-image" id='social'></div>
-                        <div class="col s12 card-stacked">
-                            <div class="card-content" style="color: black">
-                                <h3 style="color: black; text-align: left">Social Media Management</h3>
-                                <p style="text-align: left">We will take care of your current customers whilst gaining more leads for your business using our sales team's proven record of success. We can tie into your overarching sales plan or develop a new strategy with you.</p>
-                                <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
-                            <div data-collapse="collapse-content1"  data-text-close="Close">
-                            <ul style="text-align: left">
-                                <li>Content Marketing</li>
-                                <li>Social Media Marketing</li>
-                                <li>SEO</li>
-                                <li>Website Optimization</li>
-                                <li>Email Marketing</li>
-                            </ul>
-                            </div>  
-                            <div class="card-action">
-                                <span><a href="index.html#contact">Let's Talk</a></span>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-            <!-- mobile -->
-            <!-- <div class="hide-on-med-only hide-on-large-only" id='display_mobile'>
-                <div class="col s12">
-                    <div class="card col s12">
-                        <div class="col s12 card-stacked">
-                            <div class="card-content" style="color: black">
-                                <h3 style="color: black; text-align: left">Social Media Management</h3>
-                                <p style="text-align: left">We will take care of your current customers whilst gaining more leads for your business using our sales team's proven record of success. We can tie into your overarching sales plan or develop a new strategy with you.</p>
-                                <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
-                            <div data-collapse="collapse-content1"  data-text-close="Close">
-                            <ul style="text-align: left">
-                                <li>Content Marketing</li>
-                                <li>Social Media Marketing</li>
-                                <li>SEO</li>
-                                <li>Website Optimization</li>
-                                <li>Email Marketing</li>
-                            </ul>
-                            </div>  
-                            <div class="card-action">
-                                <span><a href="index.html#contact">Let's Talk</a></span>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-        </div>
+       </div>
     </div>
     <div id="footer">
         <div class="left">
