Updated Home. Added Banner and mouse icon;

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
                         </a>
                     </svg>
                 </div>
+                <h4 class="white-text">SuperCharge your Business with <b class='logo-color'>Deegeelab</b></h4>
+                <a href="#pillars" data-activates="menu" class="btn-flat btn-floating grey-text darken-4"><i class="material-icons">mouse</i></a>
             </div>
         </div>  
         <div class="section col s12 Pillarbg1 "><!-- Pillar -->
