--- a/backend.html
+++ b/backend.html
@@ -26,15 +26,13 @@
                 <div class="col s12 m6 l6 services-content" >
                     <div class="scroll">
                         <h4>Customer Support (Back End)</h4>
-                        <p class="grey-text">
-                            Make your business expansion your focus. We will turn the average process such as office administration, account creation, outbound chat support and document processing into a thing of the past by moving it from your office to ours. All you need to do is focus on creating amazing products or services for your business.
-                        </p>
+                        <p class="grey-text">Make your business expansion your focus. We will turn the average process such as office administration, account creation, outbound chat support and document processing into a thing of the past by moving it from your office to ours. We at Deegeelab can do the following back-end customer support processes:</p>
                         <ul class="grey-text paragraph">
                             <li><i class="material-icons bulleted">brightness_1</i> Handle office admin processes</li>
                             <li><i class="material-icons bulleted">brightness_1</i> Attract new customers into your systems.</li>
                             <li><i class="material-icons bulleted">brightness_1</i> Enter data in a CRM system or update customer records</li>
                             <li><i class="material-icons bulleted">brightness_1</i> Validate and provision customer orders and set-up billing and payment preferences, following your processes and your timeframes.</li>
-                            <li><i class="material-icons bulleted">brightness_1</i> Digitize your business to increase its accessibility</li>
+                            <li><i class="material-icons bulleted">brightness_1</i> Digitize your business to increase its accessibility.</li>
                             <li><i class="material-icons bulleted">brightness_1</i> Handle emails Inbound/Outbound Chat Support</li>
                             <li><i class="material-icons bulleted">brightness_1</i> Handle all paperwork that can be processed online</li>
                             <li><i class="material-icons bulleted">brightness_1</i> File documents</li>
