--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Digital Marketing">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
     <title>Deegeelab - Your Digital Marketing Specialist in Australia</title>
-    <link href="assets/Logo/DeegeelabWhite.png" rel="icon">
+    <link href="assets/images/icon.png" rel="icon">
     <link href="assets/css/materialize.min.css" rel="stylesheet" type="text/css">
     <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
     <link href="assets/css/responsive.css" rel="stylesheet" type="text/css">
@@ -95,7 +95,8 @@
                                     Front End</h5>
                                 </div>
                             </div>
-                        </div><!-- tablet -->
+                        </div>
+                        <!-- tablet -->
                         <div class="hide-on-small-only hide-on-large-only" id='display_tablet'>
                             <div data-count='one' class="panel col s3 ">
                                 <div class="bottom">
@@ -131,40 +132,31 @@
                                     Front End</h5>
                                 </div>
                             </div>
-                        </div><!-- desktop -->
+                        </div>
+                        <!-- desktop -->
                         <div class="hide-on-med-only hide-on-small-only" id='display_desktop'>
                             <div data-count='one' class="panel" id="a">
-                                <div class="bottom">
-                                    <a href="marketing.html">Learn More</a>
-                                </div>
                                 <div class="text">
-                                    <h5>Digital Marketing</h5>
+                                    <a href="marketing.html" class="btn-round btn-flat waves-effect waves-light white-text">Learn More</a>
+                                    <h5 class="bold">Digital Marketing</h5>
                                 </div>
                             </div>
                             <div data-count='two' class="panel" id="b">
-                                <div class="bottom">
-                                    <a href="lead.html">Learn More</a>
-                                </div>
                                 <div class="text">
-                                    <h5>Lead Generation</h5>
+                                    <a href="lead.html" class="btn-round btn-flat waves-effect waves-light white-text">Learn More</a>
+                                    <h5 class="bold">Lead Generation</h5>
                                 </div>
                             </div>
                             <div data-count='three' class="panel" id="c">
-                                <div class="bottom">
-                                    <a href="backend.html">Learn More</a>
-                                </div>
                                 <div class="text">
-                                    <h5>Customer Support<br>
-                                    Back End</h5>
+                                    <a href="backend.html" class="btn-round btn-flat waves-effect waves-light white-text">Learn More</a>
+                                    <h5 class="bold">Customer Support<br> Back End</h5>
                                 </div>
                             </div>
                             <div data-count='four' class="panel" id="d">
-                                <div class="bottom">
-                                    <a href="frontend.html">Learn More</a>
-                                </div>
                                 <div class="text">
-                                    <h5>Customer Support<br>
-                                    Front End</h5>
+                                    <a href="frontend.html" class="btn-round btn-flat waves-effect waves-light white-text">Learn More</a>
+                                    <h5 class="bold">Customer Support<br>Front End</h5>
                                 </div>
                             </div>
                         </div>
