--- a/marketing.html
+++ b/marketing.html
@@ -26,7 +26,7 @@
                 <div class="col s12 m6 l6 services-content" >
                     <div class="scroll">
                         <h4>Digital Marketing</h4>
-                        <p class="grey-text">We develop customized digital marketing strategies using SEO, Social Media Marketing, email marketing, and other techniques to drive traffic to client's website, engage with customers, and gain more leads. Our team also works on the physical and technical aspects of the client’s website. Also, we create engaging and relevant written, graphic, and video content that are in line with the brand. We keep our content and digital marketing strategies up-to-date with the latest marketing trends and technologies to give our clients the winning edge that they deserve.</p>
+                        <p class="grey-text">We develop customised digital marketing strategies using SEO, Social Media Marketing, email marketing, and other techniques to drive traffic to client's website, engage with customers, and gain more leads. Our team also works on the physical and technical aspects of the client’s website. Also, we create engaging and relevant written, graphic, and video content that are in line with the brand. To give our clients the winning edge that they deserve we do the following:</p>
                         <ul class="grey-text paragraph">
                             <li><i class="material-icons bulleted">brightness_1</i> Develop and implement SEO and PPC strategies</li>
                             <li><i class="material-icons bulleted">brightness_1</i> Create and manage link building strategies, content marketing strategies, and social media presences</li>
