--- a/social.html
+++ b/social.html
@@ -27,15 +27,14 @@
                 <div class="col s12 m6 l6 services-content">
                     <div class="scroll">
                         <h4>Social Media Management</h4>
-                        <p class="grey-text">
-                            We will take care of your current customers whilst gaining more leads for your business using our sales team's proven record of success. We can tie into your overarching sales plan or develop a new strategy with you.
-                        </p>
+                        <p class="grey-text">Social media management is a critical part of any online marketing strategy. Social media allows you to expand your network and put your business on the radar of your prospect market. Most customers spend a lot of time on social media. They reach out about their orders and send inquiries through social media.  As such, creating and managing an active social media page for your business is a must. We at Deegeelab specialize in:</p>
                         <ul class="grey-text paragraph">
-                            <li><i class="material-icons bulleted">brightness_1</i> Content Marketing</li>
-                            <li><i class="material-icons bulleted">brightness_1</i> Social Media Marketing</li>
-                            <li><i class="material-icons bulleted">brightness_1</i> SEO</li>
-                            <li><i class="material-icons bulleted">brightness_1</i> Website Optimization</li>
-                            <li><i class="material-icons bulleted">brightness_1</i> Email Marketing</li>
+                            <li><i class="material-icons bulleted">brightness_1</i> Creating Social Media pages (Facebook, Instagram, Twitter, LinkedIn, etc.)</li>
+                            <li><i class="material-icons bulleted">brightness_1</i> Growing your followers and reaching out to your audience</li>
+                            <li><i class="material-icons bulleted">brightness_1</i> Engaging with related social media communities</li>
+                            <li><i class="material-icons bulleted">brightness_1</i> Publishing written and graphic content that are consistent with your brand</li>
+                            <li><i class="material-icons bulleted">brightness_1</i> Replying to messages on your social media channels</li>
+                            <li><i class="material-icons bulleted">brightness_1</i> Keeping abreast with the latest social media trends in your industry</li>
                         </ul>
                         <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
                     </div>
