--- a/webdev.html
+++ b/webdev.html
@@ -26,7 +26,7 @@
                 <div class="col s12 m6 l6 services-content" >
                     <div class="scroll">
                         <h4>Website Development</h4>
-                        <p class="grey-text">Offering high-quality products or services is just one half of the challenge that businesses face today. In the last five years, Australia’s online shopping industry has grown rapidly. For business owners, this means that is highly recommended to have a fully functional website where you can market your business or establish your brand.</p>
+                        <p class="grey-text">Offering high-quality products or services is just one half of the challenge that businesses face today. In the last five years, Australia’s online shopping industry has grown rapidly. For business owners, this means that is highly recommended to have a website that has:</p>
                         <ul class="grey-text paragraph">
                             <li><i class="material-icons bulleted">brightness_1</i> Mobile-responsive pages</li>
                             <li><i class="material-icons bulleted">brightness_1</i> Clear, concise and engaging written content</li>
