--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                             <circle class="st1" cx="15.2" cy="490.5" r="15.5" data-link='frontend.html' data-name='Customer Support Front-End' data-image='bghome.jpg' data-desc='Handle office admin processes such as data entry and managing accounting applications.'/>
                         </a>
                     </svg>
+                    <div class='list'></div>
                 </div>
                 <h4 class="white-text">SuperCharge your Business with <b class='logo-color'>Deegeelab</b></h4>
                 <a href="#pillars" data-activates="menu" class="btn-flat btn-floating grey-text darken-4"><i class="material-icons">mouse</i></a>
@@ -62,16 +63,14 @@
                         <!-- mobile -->
                         <div class="hide-on-med-only hide-on-large-only" id='display_mobile'>
                             <div data-count='one' class="panel col s12 ">
-                                <div class="bottom">
-                                    <a href="marketing.html">Learn More</a>
-                                </div>
                                 <div class="text">
+                                    <a href="marketing.html" class="btn-round btn-flat waves-effect waves-light white-text">Learn More</a>
                                     <h5>Digital Marketing</h5>
                                 </div>
                             </div>
                             <div data-count='two' class="panel col s12 ">
                                 <div class="bottom">
-                                    <a href="lead.html">Learn More</a>
+                                    <a href="lead.html" class="btn-round btn-flat waves-effect waves-light white-text">Learn More</a>
                                 </div>
                                 <div class="text">
                                     <h5>Lead Generation</h5>
@@ -79,6 +78,7 @@
                             </div>
                             <div data-count='three' class="panel col s12 ">
                                 <div class="bottom">
+                                    <a href="marketing.html" class="btn-round btn-flat waves-effect waves-light white-text">Learn More</a>
                                     <a href="backend.html">Learn More</a>
                                 </div>
                                 <div class="text">
@@ -88,6 +88,7 @@
                             </div>
                             <div data-count='four' class="panel col s12 ">
                                 <div class="bottom">
+                                    <a href="marketing.html" class="btn-round btn-flat waves-effect waves-light white-text">Learn More</a>
                                     <a href="frontend.html">Learn More</a>
                                 </div>
                                 <div class="text">
@@ -285,12 +286,12 @@
     <script src="assets/js/jquery.min.js"></script> 
     <script src="assets/js/jquery.easings.min.js"></script> 
     <script src="assets/js/jquery.sidr.min.js"></script>
+    <script src="assets/js/scrolloverflow.min.js"></script> 
     <script src="assets/js/jquery.fullPage.js"></script> 
     <script src="assets/js/jquery.fullpage.extensions.min.js"></script> 
     <script src="assets/js/materialize.min.js"></script> 
     <script src="assets/js/validation/jquery.validate.min.js"></script> 
     <script src="assets/js/validation/additional-methods.min.js"></script> 
-    <script src="assets/js/scrolloverflow.min.js"></script> 
     <script src="assets/js/pillar.js"></script>
     <script src="assets/js/system.js"></script>
     <script src="assets/js/scripts.js"></script>
