--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,123 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta content="RNR Developer Team" name="author">
-    <meta name="">
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-    <title>Deegeelab - Digital Marketing - SuperCharge Your Business</title>
-    <link href="assets/Logo/DeegeelabWhite.png" rel="icon">
-    <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:100,300,400,600,700" rel="stylesheet" type="text/css">
-    <link href="assets/fonts/flaticon.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/responsive.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/jquery.fullpage.min.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/animate.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/materialize.min.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/socialfloat.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-	<div class="container">
-        <div class="section col s12 m10 l8 offset-l2">
-            <div class="row">
-                <div class="layer" data-depth="0.3">
-                    <div class="card">
-                        <div class="card col s12" style="padding: 0 30px;">
-                            <div class="card horizontal row">
-                            	<h5 class="col s4" style="margin-top: 20px; color: #02bad0;">Privacy Policy</h5>
-								<div class="col s8">
-									<p><span>Last updated: January 03, 2018</span></p>
-									<p><span>Deegeelab ("us", "we", or "our") operates the deegeelab.com website (the "Service").</span></p>
-									<p><span>This page informs you of our policies regarding the collection, use and disclosure of Personal Information when you use our Service.</span></p>
-									<p><span>We will not use or share your information with anyone except as described in this Privacy Policy. </span></p> <!-- <a href="http://privacy-policy-template.com">Privacy Policy Template</a> for Deegeelab.</p>
-									 -->
-									<p><span>We use your Personal Information for providing and improving the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, accessible at deegeelab.com</span></p>
-								</div>
-                            </div>
-                            <div class="card horizontal row">
-                            	<h5 class="col s4" style="margin-top: 20px; color: #02bad0;">Information Collection And Use</h5>
-								<div class="col s8">
-									<p><span>While using our Service, we may ask you to provide us with certain personally identifiable information that can be used to contact or identify you. Personally identifiable information may include, but is not limited to, your name, phone number, postal address ("Personal Information").</span></p>
-								</div>
-                            </div>
-                            <div class="card horizontal row">
-                            	<h5 class="col s4" style="margin-top: 20px; color: #02bad0;">Log Data</h5>
-								<div class="col s8">
-									<p><span>We collect information that your browser sends whenever you visit our Service ("Log Data"). This Log Data may include information such as your computer's Internet Protocol ("IP") address, browser type, browser version, the pages of our Service that you visit, the time and date of your visit, the time spent on those pages and other statistics.</span></p>
-								</div>
-                            </div>
-                            <div class="card horizontal row">
-                            	<h5 class="col s4" style="margin-top: 20px; color: #02bad0;">Cookies</h5>
-								<div class="col s8">
-									<p><span>Cookies are files with small amount of data, which may include an anonymous unique identifier. Cookies are sent to your browser from a web site and stored on your computer's hard drive.</span></p>
-									<p><span>We use "cookies" to collect information. You can instruct your browser to refuse all cookies or to indicate when a cookie is being sent. However, if you do not accept cookies, you may not be able to use some portions of our Service.</span></p>
-								</div>
-                            </div>
-                            <div class="card horizontal row">
-                            	<h5 class="col s4" style="margin-top: 20px; color: #02bad0;">Service Providers</h5>
-								<div class="col s8">
-									<p><span>We may employ third party companies and individuals to facilitate our Service, to provide the Service on our behalf, to perform Service-related services or to assist us in analyzing how our Service is used.</span></p>
-									<p><span>These third parties have access to your Personal Information only to perform these tasks on our behalf and are obligated not to disclose or use it for any other purpose.</span></p>
-								</div>
-                            </div>
-                            <div class="card horizontal row">
-                            	<h5 class="col s4" style="margin-top: 20px; color: #02bad0;">Security</h5>
-								<div class="col s8">
-									<p><span>The security of your Personal Information is important to us, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While we strive to use commercially acceptable means to protect your Personal Information, we cannot guarantee its absolute security.</span></p>
-								</div>
-                            </div>
-                            <div class="card horizontal row">
-                            	<h5 class="col s4" style="margin-top: 20px; color: #02bad0;">Links To Other Sites</h5>
-								<div class="col s8">
-									<p><span>Our Service may contain links to other sites that are not operated by us. If you click on a third party link, you will be directed to that third party's site. We strongly advise you to review the Privacy Policy of every site you visit.</span></p>
-									<p><span>We have no control over, and assume no responsibility for the content, privacy policies or practices of any third party sites or services.</span></p>
-								</div>
-                            </div>
-                            <div class="card horizontal row">
-                            	<h5 class="col s4" style="margin-top: 20px; color: #02bad0;">Children's Privacy</h5>
-								<div class="col s8">
-									<p><span>Our Service does not address anyone under the age of 13 ("Children").</span></p>
-									<p><span>We do not knowingly collect personally identifiable information from children under 13. If you are a parent or guardian and you are aware that your Children has provided us with Personal Information, please contact us. If we discover that a Children under 13 has provided us with Personal Information, we will delete such information from our servers immediately.</span></p>
-								</div>
-                            </div>
-                            <div class="card horizontal row">
-                            	<h5 class="col s4" style="margin-top: 20px; color: #02bad0;">Changes To This Privacy Policy</h5>
-								<div class="col s8">
-									<p><span>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.</span></p>
-									<p><span>You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.</span></p>
-								</div>
-                            </div>
-                            <div class="card horizontal row">
-                            	<h5 class="col s4" style="margin-top: 20px; color: #02bad0;">Contact Us</h5>
-								<div class="col s8">
-									<p><span>If you have any questions about this Privacy Policy, please contact us.</span></p>
-								</div>
-                            </div>
+    <head>
+        <meta charset="UTF-8">
+        <meta content="RNR Developer Team" name="author">
+        <meta name="">
+        <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
+        <title>Deegeelab - Digital Marketing - SuperCharge Your Business</title>
+        <link href="assets/Logo/DeegeelabWhite.png" rel="icon">
+        <link href="assets/css/materialize.min.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/responsive.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/animate.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/svg.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/pillar.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <div class="container">
+            <div class="section">
+                <div class="row">
+                    <div class="col s10 m10 l8 offset-s1 offset-m1 offset-l2 enclosed">
+                        <div class="row">
+                            <a href="index.html" class="btn-flat btn-floating grey-text darken-4 right"><i class="material-icons black-text">close</i></a>
                         </div>
+                        <div class="divider"></div>
+                        <h5 class="bold">Privacy Policy</h5>
+                        <p>Last updated: January 03, 2018</p>
+                        <p>Deegeelab ("us", "we", or "our") operates the deegeelab.com website (the "Service").</p>
+                        <p>This page informs you of our policies regarding the collection, use and disclosure of Personal Information when you use our Service.</p>
+                        <p>We will not use or share your information with anyone except as described in this Privacy Policy. </p>
+                        <p>We use your Personal Information for providing and improving the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, accessible at deegeelab.com</p>
+
+                        <h6 class='bold'>Information Collection And Use</h6>
+                        <p>While using our Service, we may ask you to provide us with certain personally identifiable information that can be used to contact or identify you. Personally identifiable information may include, but is not limited to, your name, phone number, postal address ("Personal Information").</p>
+
+                        <h6 class='bold'>Log Data</h6>
+                        <p>We collect information that your browser sends whenever you visit our Service ("Log Data"). This Log Data may include information such as your computer's Internet Protocol ("IP") address, browser type, browser version, the pages of our Service that you visit, the time and date of your visit, the time spent on those pages and other statistics.</p>
+
+                        <h6 class='bold'>Cookies</h6>
+                        <p>Cookies are files with small amount of data, which may include an anonymous unique identifier. Cookies are sent to your browser from a web site and stored on your computer's hard drive.</p>
+                        <p>We use "cookies" to collect information. You can instruct your browser to refuse all cookies or to indicate when a cookie is being sent. However, if you do not accept cookies, you may not be able to use some portions of our Service.</p>
+
+                        <h6 class='bold'>Service Providers</h6>
+                        <p>We may employ third party companies and individuals to facilitate our Service, to provide the Service on our behalf, to perform Service-related services or to assist us in analyzing how our Service is used.</p>
+                        <p>These third parties have access to your Personal Information only to perform these tasks on our behalf and are obligated not to disclose or use it for any other purpose.</p>
+
+                        <h6 class='bold'>Security</h6>
+                        <p>The security of your Personal Information is important to us, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While we strive to use commercially acceptable means to protect your Personal Information, we cannot guarantee its absolute security.</p>
+
+                        <h6 class='bold'>Links To Other Sites</h6>
+                        <p>Our Service may contain links to other sites that are not operated by us. If you click on a third party link, you will be directed to that third party's site. We strongly advise you to review the Privacy Policy of every site you visit.</p>
+                        <p>We have no control over, and assume no responsibility for the content, privacy policies or practices of any third party sites or services.</p>
+
+                        <h6 class='bold'>Children's Privacy</h6>
+                        <p>Our Service does not address anyone under the age of 13 ("Children").</p>
+                        <p>We do not knowingly collect personally identifiable information from children under 13. If you are a parent or guardian and you are aware that your Children has provided us with Personal Information, please contact us. If we discover that a Children under 13 has provided us with Personal Information, we will delete such information from our servers immediately.</p>
+
+                        <h6 class='bold'>Changes To This Privacy Policy</h6>
+                        <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
+                        <p>You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.</p>
+
+                        <h6 class='bold'>Contact Us</h6>
+                        <p>If you have any questions about this Privacy Policy, <a href="index.html#contact">please contact us.</a></p>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-	<div id="footer">
-        <div class="left">
-            <ul style="margin-top: -10px;">
-                <li><img width="60px" src="assets/images/footer/dgwhite.png"></li>
-                <li><a class="white-text" href='#'><i class="material-icons" style="line-height: unset;">copyright</i> <span class="right">2017 Deegeelab</span></a></li>
-            </ul>
+        <div id="footer">
+            <div class="left">
+                <ul style="margin-top: -10px;">
+                    <li><img width="60px" src="assets/images/footer/dgwhite.png"></li>
+                    <li><a class="white-text" href='#'><i class="material-icons" style="line-height: unset;">copyright</i> <span class="right">2017 Deegeelab</span></a></li>
+                </ul>
+            </div>
+            <div class="right">
+                <ul style="margin-top: -10px;">
+                    <li><a href="privacy-policy.html" class="white-text">Privacy Policy</a></li>
+                    <li><a href="terms-of-use.html" class="white-text">Terms of use</a></li>
+                    <li style="top: 5px;position:  relative;">
+                        <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" class="left social-icons" src="assets/images/footer/facebook_icon.png"></a>
+                        <a href="http://localhost/deegeelab/"><img width="35px" class="left social-icons" src="assets/images/footer/instagram_icon.png"></a>
+                        <a href="http://localhost/deegeelab/"><img width="30px" class="left social-icons" src="assets/images/footer/goog_icon.png"></a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="right">
-            <ul style="margin-top: -10px;">
-                <li><a href="privacy-policy.html" class="white-text">Privacy Policy</a></li>
-                <li><a href="terms-of-use.html" class="white-text">Terms of use</a></li>
-                <li style="top: 5px;position:  relative;">
-                    <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" class="left social-icons" src="assets/images/footer/facebook_icon.png"></a>
-                    <a href="http://localhost/deegeelab/"><img width="35px" class="left social-icons" src="assets/images/footer/instagram_icon.png"></a>
-                    <a href="http://localhost/deegeelab/"><img width="30px" class="left social-icons" src="assets/images/footer/goog_icon.png"></a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</body>
+    </body>
+    <script src="assets/js/jquery.min.js"></script> 
+    <script src="assets/js/jquery.easings.min.js"></script> 
+    <script src="assets/js/jquery.sidr.min.js"></script>
+    <script src="assets/js/materialize.min.js"></script> 
+    <script src="assets/js/scrolloverflow.min.js"></script> 
+
+</html>
